[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lat-finder"
version = "0.1.0"
description = "Fast async subdomain discovery tool"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["subdomain", "dns", "recon", "security", "bug-bounty"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "dnspython>=2.6",
]

[project.scripts]
lat-finder = "latfinder.__main__:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/lat-finder"
Issues = "https://github.com/YOUR_USERNAME/lat-finder/issues"

[tool.hatch.build.targets.wheel]
packages = ["latfinder"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
